# genai-demo-audio-vlm

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  VLM_MM-Audio_Demo.ipynb  conda-project.yml  docker-compose.yml  environment.yaml  main.html  pyproject.toml  requirements.txt
.github/workflows/: deploy-google-artifact-registry.yml  deploy-to-quay.yml
audiovlm_demo/: __init__.py  main.py
audiovlm_demo/core/: components.py  utils.py
audiovlm_demo/ui/: main.html  panel.py
